everything except for preventing overflow of images when vertically stacked

--- a/client/src/NewActivities.css
+++ b/client/src/NewActivities.css
@@ -4,14 +4,18 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    font-family: 'Roboto';
+    /* font-family: 'Roboto'; */
     background-color: #0B0533;
     /* background: #1b1b1b; */
     /* color: #e2e2e2; */
 }
 
-h1 {
+
+.activities-landing-title {
+    font-family: "Crimson Text", serif;
     color: #DD9313;
+    font-weight: 700;
+    font-style: normal;
 }
 
 p {
@@ -46,15 +50,20 @@ p {
     left: 0;
     right: 0;
     bottom: 0;
-    background: rgba(0, 0, 0, 0.8); /* Semi-transparent grey overlay */
+    background: rgba(0, 0, 0, 0.85); /* Semi-transparent grey overlay */
     color: white;
     justify-content: center;
     align-items: center;
     text-align: center;
-    font-size: 1.5rem;
     z-index: 20; /* Make sure it's above the image */
     transition: opacity 0.3s ease; /* Smooth transition for hover effect */
+    font-size: 1rem;
+    font-family: "Plus Jakarta Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 200;
+    font-style: normal;
   }
+  
   
   .activities-slide:hover .activities-hover-caption {
     display: flex; /* Show caption on hover */
@@ -204,6 +213,21 @@ p {
 /* ...Your existing CSS... */
 
 /*POPUP CODE*/
+.activities-popup-title {
+    font-family: "Crimson Text", serif;
+    color: White;
+    font-weight: 700;
+    font-style: normal;
+}
+
+.activities-popup-statistical-analysis {
+    font-size: 0.75rem;
+    font-family: "Plus Jakarta Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 200;
+    font-style: normal;
+}
+
 .activities-popup-overlay {
     position: fixed;
     top: 0;
@@ -274,6 +298,7 @@ p {
     justify-content: center;
     align-items: center;
     border-radius: 10px;
+    overflow: hidden;
 }
 
 .activities-popup-image {
@@ -306,16 +331,26 @@ p {
     /* Style as needed */
 }
 
+.activities-popup-button-text {
+    font-size: 0.75rem;
+    font-family: "Plus Jakarta Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 200;
+    font-style: normal;
+    color: white;
+}
+
 .activities-popup-footer button {
     margin: 10px 0;
     padding: 5px 10px;
     border: none;
-    background-color: #f2f2f2;
     cursor: pointer;
+    border: 1px solid transparent;
 }
 
 .activities-popup-footer button:hover {
-    background-color: #e2e2e2;
+    background: rgba(0, 0, 0, 0.85); /* Semi-transparent grey overlay */
+    border: 1px solid;
 }
 
 @media (min-width: 1280px){
@@ -358,6 +393,11 @@ p {
 }
 
 @media (max-width: 1100px) {
+    /* .activities-popup-image {
+        width: 100%;
+        height: 100%;
+    } */
+
     .activities-popup-slides-container {
       flex-direction: column; /* Stack slides vertically */
     }
